Fix gameUI z-index

--- a/css/app.css
+++ b/css/app.css
@@ -298,6 +298,7 @@ button.highlighted-button {
     position: absolute;
     left: 15px;
     top: 15px;
+    z-index: 4;
 }
 
 @media (max-width: 768px) {
